FIX unsquish text on small viewports
Small viewsports were presenting both text, input and image on the same screen still,
compacting the space available for the text and input due to the image. This was
unpleasant to witness, and difficult to use. Removing the method icon solves this issue.

--- a/client/src/components/WebAuthn/Register.scss
+++ b/client/src/components/WebAuthn/Register.scss
@@ -38,9 +38,19 @@
   height: $sizing-thumbnail;
   padding: $padding-thumbnail;
   width: $sizing-thumbnail;
+  display: none;
+
+  @media screen and (min-width: $mobile-breakpoint) {
+    display: block;
+  }
 }
 
 .mfa-registration-container__actions {
   grid-column: $grid-column-content;
   grid-row: $grid-row-actions;
+  margin-top: 20px;
+
+  @media screen and (min-width: $mobile-breakpoint) {
+    margin-top: 0;
+  }
 }
